--- a/libft/Makefile
+++ b/libft/Makefile
@@ -2,7 +2,7 @@ NAME=libft.a
 
 CC=gcc
 
-CFLAGS=-Wall -Wextra -Werror -O3
+CFLAGS=-Wall -Wextra -Werror
 
 RM=rm -f
 
@@ -20,7 +20,7 @@ ft_toupper.c ft_tolower.c ft_putchar.c ft_putchar_fd.c \
 ft_strnew.c ft_strdel.c ft_strclr.c ft_striter.c \
 ft_itoa.c ft_striteri.c ft_strmap.c ft_strmapi.c ft_strequ.c \
 ft_strnequ.c ft_strsub.c ft_strjoin.c ft_strtrim.c ft_strsplit.c \
-ft_putstr.c ft_putendl.c ft_putnbr.c ft_putstr_fd.c ft_putendl_fd.c\
+ft_putstr.c ft_putendl.c ft_putnbr.c ft_putstr_fd.c ft_putendl_fd.c \
 ft_putnbr_fd.c ft_strchr.c ft_strrchr.c \
 
 OBJ=$(SRC:.c=.o)
@@ -41,4 +41,3 @@ fclean: clean
 re: fclean all
 
 .PHONY: clean fclean
-	
