--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,8 +1,20 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: vkaznodi <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2017/12/26 13:59:57 by vkaznodi          #+#    #+#              #
+#    Updated: 2017/12/26 14:00:01 by vkaznodi         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME=libft.a
 
 CC=gcc
 
-CFLAGS=-Wall -Wextra -Werror
+FLAGS=-Wall -Wextra -Werror
 
 RM=rm -f
 
@@ -21,16 +33,19 @@ ft_strnew.c ft_strdel.c ft_strclr.c ft_striter.c \
 ft_itoa.c ft_striteri.c ft_strmap.c ft_strmapi.c ft_strequ.c \
 ft_strnequ.c ft_strsub.c ft_strjoin.c ft_strtrim.c ft_strsplit.c \
 ft_putstr.c ft_putendl.c ft_putnbr.c ft_putstr_fd.c ft_putendl_fd.c \
-ft_putnbr_fd.c ft_strchr.c ft_strrchr.c \
+ft_putnbr_fd.c ft_strchr.c ft_strrchr.c ft_lstnew.c ft_lstdelone.c \
+ft_lstdel.c ft_lstadd.c ft_lstiter.c ft_lstmap.c \
 
 OBJ=$(SRC:.c=.o)
+	
+all: $(NAME)
 
-$(NAME): libft.h
-	$(CC) $(CLAGS) -c $(SRC)
+%.o: %.c
+	$(CC) $(FLAGS) -c -o $@ $<
+
+$(NAME): $(OBJ)
 	ar rc $(NAME) $(OBJ)
 	ranlib $(NAME)
-
-all:	$(NAME)
 
 clean:
 	$(RM) $(OBJ)
